[package]
name = "unnamed-io-game-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "bin/server.rs"

[[bin]]
name = "client"
path = "bin/client.rs"

[workspace]
members = ["net", "common"]

[dependencies]
net = { path = "net" }
common = { path = "common" }
tokio = { version = "1.40.0" , features = ["time", "sync"] }
console = "0.15.8"