[package]
name = "unnamed-io-game-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "bin/server.rs"

[[bin]]
name = "client"
path = "bin/client.rs"

[workspace]
members = ["net"]

[dependencies]
net = { path = "net" }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
tokio-util = { version = "0.7.12" , features = ["codec"] }
console = "0.15.8"
